# Retirement-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py  tools.py
backend/app/core/: config.py  middleware.py
backend/app/data/: prompts.json
backend/app/db/: database.py  models.py
backend/app/router/: auth.py  chat.py  documents.py  models.py  profile.py
backend/app/services/db/: __init__.py  database.py  models.py  sessions.py
backend/app/services/shared/: auth.py  chat.py  guardrails.py  models.py  profile.py
backend/app/services/vector/: __init__.py  client.py  documents.py  ingest.py
backend/app/vector/: client.py  ingest.py
backend/initdb/: 01_privileges.sql
backend/pgadmin/: servers.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: auth.ts  chat.ts  documents.ts  profile.ts
frontend/src/components/admin/: DocumentList.jsx  DocumentUploader.jsx
frontend/src/components/chat/: ActivityPanel.jsx  ChatInput.jsx  ChatWindow.jsx  FormattedMessage.jsx  MessageBubble.jsx  SourceCard.jsx  ToolApprovalCard.jsx  WelcomeScreen.jsx
frontend/src/components/navigation/: Sidebar.jsx
frontend/src/components/profile/: ProfileForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: AppLayout.jsx
frontend/src/pages/: AdminPage.jsx  ChatPage.jsx  LoginPage.jsx  ProfilePage.jsx
frontend/src/types/: auth.ts  chat.ts  document.ts  profile.ts
(+1 files in other folders)
