[project]
name = "retirement-rag-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "python-multipart>=0.0.9",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.1",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pypdf>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
